[package]
name = "rsdsl_pppoe3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ppproperly = { git = "https://github.com/rsdsl/ppproperly.git", version = "0.1.0" }
rsdsl_ip_config = { git = "https://github.com/rsdsl/ip_config.git", version = "0.2.3" }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync"] }
