[package]
name = "rsdsl_pppoe3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "2.1.0"
ioctl-sys = "0.8.0"
libc = "0.2.149"
mac_address = "1.1.5"
md5 = "0.7.0"
ppproperly = { git = "https://github.com/rsdsl/ppproperly.git", version = "0.1.0" }
rand = "0.8.5"
rsdsl_ip_config = { git = "https://github.com/rsdsl/ip_config.git", version = "0.2.4" }
rsdsl_netlinklib = { git = "https://github.com/rsdsl/netlinklib.git", version = "0.4.4", default-features = false, features = ["status"] }
serde = "1.0"
serde_json = "1.0"
socket2 = "0.5.5"
sysinfo = { version = "0.29.10", default-features = false }
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "net", "signal"] }
